# TipFlow

./: .gitignore  COINBASE_ENV_SETUP.md  COINBASE_PAY_SETUP.md  COINBASE_TESTING.md  README.md  REAL_INTEGRATION_SETUP.md  SETUP.md  package-lock.json  package.json  vercel.json
flowtip-program/: Anchor.toml  package.json  tsconfig.json
flowtip-program/programs/flowtip-program/: Cargo.toml
flowtip-program/programs/flowtip-program/src/: lib.rs
flowtip-program/tests/: flowtip-program.ts
frontend/: .firebaserc  firestore.rules  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.debug.tsx  App.tsx  index.css
frontend/src/components/: CoinbaseFundCard.tsx  CryptoIcon.tsx  ProfileCreationModal.tsx  RealBlockchainNotice.tsx  TipsAnalyticsChart.tsx
frontend/src/config/: cloudinary.ts  firebase.ts
frontend/src/hooks/: useDynamicFeatures.ts  useUserProfile.ts
frontend/src/pages/: DashboardPage.tsx  MyTipsPage.tsx  ProfilePage.tsx  TippingPage.tsx  WelcomePage.simple.tsx  WelcomePage.tsx
frontend/src/providers/: DynamicProvider.fixed.tsx  DynamicProvider.tsx  SolanaDynamicProvider.tsx
frontend/src/services/: blockchainService.ts  tipService.ts  userService.ts
relayer/: FUNDING_SETUP.md  README.md  convert-keypair.js  env-setup.md  env.template  next.config.js  package.json  setup-real-transactions.md  tsconfig.json
relayer/.next/: trace
relayer/.next/server/: _error.js
relayer/pages/api/: create-coinbase-session.ts  create-stripe-onramp-session.ts  send-gasless-tx.ts
relayer/utils/: transaction-helper.ts
(+13 files in other folders)
