[package]
name = "flowtip-program"
version = "0.1.0"
description = "FlowTip: Gasless USDC Micro-Tipping Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flowtip_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0" 